# hazeleo-assitant

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
app/: __init__.py  agent_service.py  config.py  main.py  openai_client.py  reminders.py  schemas.py  skylight_client.py  storage.py  telegram_poller.py  telegram_sender.py  thread_context.py  zalo_sender.py
data/: conversation_turns.json  daily_meals.json  fridge.json  profile.md  recent.json  recurring_tasks.json  reminders.json  rules.md
tests/: test_api.py  test_reminders.py  test_schemas.py  test_storage.py  test_telegram.py
